# heretic-coder-pipeline

./: .gitignore  Makefile  README.md  conftest.py  plan.md  pyproject.toml  review01.md
.github/workflows/: ci.yml
docs/: alerting-discord-mcp.md
frontier/: conftest.py  controller.py  dataprep.py  enums.py  status_io.py  verdict.py
frontier/remote/: dataset_info.json  heretic_config.toml  orpo_llamafactory.yaml  run_frontier.py  setup.sh  sft_axolotl.yaml
frontier/tests/: test_configs.py  test_controller.py  test_dataprep.py  test_run_frontier.py
ideas/: how_to_increase_swe_score.md
model-cards/: README.md  gpt-oss-120b-heretic.md  qwen2.5-coder-32b-instruct-heretic-sft.md  qwen2.5-coder-32b-instruct-heretic.md
notebooks/: mini_pipeline.ipynb
pipeline/: config.py  runner.py
pipeline/tests/: test_config.py  test_runner.py
shared/: enums.py  exec_sandbox.py  gdrive_backup.py  harmony.py  model_card.py  model_family.py  poll.py  ssh_utils.py  status.py  train_common.py  vast_ops.py  vast_provision.py  verdict.py  webhook.py
shared/dataprep/: compress.py  contamination.py  decontaminate.py  loaders.py  negatives.py  schema.py
shared/eval/: _model.py  bfcl.py  datasets.py  humaneval.py  refusal.py  run_evals.py  swebench.py
shared/tests/: test_compress.py  test_contamination.py  test_decontaminate.py  test_eval_datasets.py  test_evals.py  test_exec_sandbox.py  test_export.py  test_harmony.py  test_loaders.py  (+12 more)
stage1/: conftest.py  controller.py  enums.py  ssh_utils.py  status_io.py  vast_provision.py  verdict.py
stage2/: conftest.py  controller.py  enums.py  status_io.py  verdict.py
stage3/: conftest.py  controller.py  enums.py  verdict.py
stage4/: conftest.py  controller.py  enums.py  status_io.py  verdict.py
stage5/: conftest.py  controller.py  enums.py  status_io.py  verdict.py
(+102 files in other folders)
